<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/title_home"
        />

    <item
        android:id="@+id/navigation_dashboard"
        android:icon="@drawable/ic_dashboard_black_24dp"
        android:title="@string/title_dashboard" />

    <item
        android:id="@+id/navigation_add_video"
        android:icon="@drawable/ic_add_circle_black_24dp"
        android:title="@string/title_add_videos"
        android:onClick="addContentButton"/>

    <item
        android:id="@+id/navigation_likes"
        android:icon="@drawable/ic_chat_black_24dp"
        android:title="@string/title_likes" />

    <item
        android:id="@+id/navigation_user"
        android:icon="@drawable/ic_person_black_24dp"
        android:title="@string/title_user" />

</menu>
